[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/EventTest.gd" type="Script" id=1]
[ext_resource path="res://scenes/UI/EventPopup.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/themes/kenney/kenney.tres" type="Theme" id=3]

[node name="EventTest" type="Node2D"]
script = ExtResource( 1 )

[node name="GetGalaxy" type="HTTPRequest" parent="."]

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="GUI"]
anchor_right = 1.0
margin_right = 40.0
margin_bottom = 40.0
size_flags_vertical = 3
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Control"]
anchor_right = 1.0
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Control/VBoxContainer"]
margin_right = 2000.0
margin_bottom = 34.0

[node name="SystemID" type="Label" parent="GUI/Control/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 182.0
margin_bottom = 29.0
text = "Arrived in system: "

[node name="SpinBox" type="SpinBox" parent="GUI/Control/VBoxContainer/HBoxContainer"]
margin_left = 186.0
margin_right = 260.0
margin_bottom = 34.0

[node name="SystemInfo" type="RichTextLabel" parent="GUI/Control/VBoxContainer"]
margin_top = 38.0
margin_right = 2000.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "
"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventPopup" parent="GUI" instance=ExtResource( 2 )]
visible = true
[connection signal="value_changed" from="GUI/Control/VBoxContainer/HBoxContainer/SpinBox" to="." method="_on_SpinBox_value_changed"]
